display: hd44780: adapt to environment
make driver buildable in my environment
checkpatch clean, except for an msleep warning.

Signed-off-by: Martin Daser <m4rt1n.d453r@web.de>

--- a/driver/Makefile
+++ b/driver/Makefile
@@ -1,8 +1,12 @@
+ARCH  := arm
+CROSS_COMPILE:=arm-none-eabi-
+KDIR:=/home/md/embedded/raspi/linux
+
+
 ifneq ($(KERNELRELEASE),)
 obj-m	:= hd44780.o
 
 else
-KDIR	:= /lib/modules/$(shell uname -r)/build
 PWD	:= $(shell pwd)
 
 default:
